[package]
name = "grpc-demo-tonic"
version = "0.1.0"
authors = ["Guy Alster <guyalster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf        = "2"
httpbis         = { git = "https://github.com/stepancheg/rust-http2" }
grpc ="*"
grpc-protobuf="*"
futures = "*"

[build-dependencies]
protoc-rust-grpc = "0.8.2"


# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"